--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <button class="btnEntrar" type="submit">Entrar</button>
                 <br>
                 <div class="links">
-                    <a class="a1" chref="">Ver um lembrete.</a>
+                    <a class="a1" chref="#">Ver um lembrete.</a>
                     <br>
-                    <a class="a2" href="">Esqueci a senha!</a>
+                    <a class="a2" href="#">Esqueci a senha!</a>
                 </div>
             </form>
         </div>
