--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </abbr>
                 </div>
                 <br>
-                <button class="btnEntrar" type="submit">Entrar</button>
+                <button class="btnEntrar" type="submit" onclick="entrar()">Entrar</button>
                 <br>
                 <div class="links">
                     <a class="a1" chref="#">Ver um lembrete.</a>
