--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <i class="bi bi-arrow-through-heart-fill"></i>
         </div>
         <div class="form">
-            <form action="#" class="formParaSignIn">
+            <form method="post" action="#" class="formParaSignIn">
                 <input id="nome" type="text" placeholder="Digite o seu Nome..." required>
                 <br>
                 <div class="password">
@@ -42,13 +42,14 @@
                 <button class="btnEntrar" type="submit" onclick="entrar()">Entrar</button>
                 <br>
                 <div class="links">
-                    <a class="a1" chref="#">Ver um lembrete.</a>
-                    <br>
-                    <a class="a2" href="#">Esqueci a senha!</a>
+                    <a chref="#">Ver um lembrete.</a>
+                    <a href="#">Esqueci a senha!</a>
+                    <a href="#">Cadastre-se!</a>
                 </div>
             </form>
         </div>
     </div>
+
 
     <script src="https://unpkg.com/scrollreveal" defer></script>
     <script src="./assets/Script/script.js" defer></script>
